# mr-rippah

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  pyproject.toml
src/: main.rs
src/mr_rippah/: __init__.py  __main__.py  rippah.py  update_checker.py
