[package]
name = "mr-rippah"
version = "0.1.0"
edition = "2024"

description = "Download Spotify playlists using librespot"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
directories = "5"
env_logger = "0.11"
futures-util = "0.3"
id3 = "1"
indicatif = "0.17"
librespot = { version = "0.7", default-features = false, features = ["with-libmdns", "native-tls"] }
log = "0.4"
reqwest = { version = "0.11", features = ["json", "stream", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
url = "2"
chrono = { version = "0.4", features = ["clock"] }
