[project]
name = "mr-rippah"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Christian Vanderwall", email = "christian@cvdub.net" }
]
dependencies = [
    "audioop-lts>=0.2.1",
    "librespot-spotizerr",
    "mutagen>=1.47.0",
    "platformdirs>=4.3.8",
    "pydub>=0.25.1",
    "requests==2.32.3",
    "tqdm>=4.67.1",
]
readme = "README.md"
requires-python = ">= 3.13"

[project.scripts]
mr-rippah = "mr_rippah.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "gnureadline>=8.2.13",
    "isort>=5.13.2",
    "pyflakes>=3.2.0",
    "ruff>=0.9.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mr_rippah"]

[tool.uv.sources]
librespot-spotizerr = { git = "https://github.com/cvdub/librespot-spotizerr", rev = "a2d0205516f43776aad8a7e8d6dbf23940a08111" }
