[project]
name = "mr-rippah"
version = "0.2.0"
description = "Fat rips!"
authors = [
    { name = "Christian Vanderwall", email = "christian@cvdub.net" }
]
dependencies = [
    "audioop-lts>=0.2.1",
    "librespot",
    "mutagen>=1.47.0",
    "platformdirs>=4.3.8",
    "pydub>=0.25.1",
    "requests==2.32.3",
    "rich>=14.2.0",
]
readme = "README.md"
requires-python = ">= 3.13"

[project.scripts]
mr-rippah = "mr_rippah.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "gnureadline>=8.2.13",
    "isort>=5.13.2",
    "pyflakes>=3.2.0",
    "ruff>=0.9.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mr_rippah"]

[tool.uv.sources]
librespot = { git = "https://github.com/kokarare1212/librespot-python", rev = "acd633d3eb26f7b61b21e5049cabb236b8f1298e" }
